2003-08-20  Per Bothner  <per@bothner.com>

	* kawa/standard/string2number.java (parse):  Pass new exactness
	parameter.

2003-08-06  Per Bothner  <per@bothner.com>

	* kawa/standard/TracedProcedure.java (indentation):  Initialize using
	Symbol.unInterned, matching 2003-03-15 gnu/mapping/Symbol.java change.

2003-08-03  Per Bothner  <per@bothner.com>

	* configure.in:  Add AC_LINK_FILES for report1.xml.in.

2003-08-01  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody):  Use new setCoercedReturnValue
	helper method in Convert.

2003-07-22  Per Bothner  <per@bothner.com>

	* configure.in (AC_OUTPUT):  Add Makefiles in gnu/kawa/models
	and gnu/kawa/swingviews.

2003-07-15  Chris Dean  <Chris.Dean@sokitomi.com>

	* kawa/standard/Scheme.java (initScheme): Add invoke-static.

2003-07-13  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Do followAliases
	when checking for a namespace-using name.

2003-07-10  Chris Dean  <Chris.Dean@sokitomi.com>

	* kawa/standard/syntax_rules.java (rewriteForm):  Allow Keywords among
	the literals

2003-06-14  Per Bothner  <per@bothner.com>

	* Makefile.am (JAVADOC_PACKAGES):  Add gnu.kawa.sax, gnu.jemacs.swing.

	* kawa/lang/Eval.java (apply):  Use CallContext's getNextArg
	method rather than getArgAsObject, which will be deprecated. 

2003-06-06  Jim White  <jim@pagesmiths.com>

	* build.xml:  Add gnu/ecmascript.  Add gnu/jemacs/swing.
	Name change to XStrings.scm.
	Check for Servlet 2.3 API for enable-servlet (HttpServletResponse
	.resetBuffer and HttpServletRequest.getRequestURL are only since 2.3).
	Init of tmp directory moved so that clean will work ok. 

	* build.xml:  Make system.scm get compiled after vectors.scm.
	
2003-06-03  Per Bothner  <per@bothner.com>

	* Makefile.am (distall):  Add more stuff.

	* kawa/standard/IfFeature.java (scanForDefinitions):  Call scan_form
	on single form.  Fixes bug reported by Sven.Hartrumpf@FernUni-Hagen.de.

2003-06-01  Per Bothner  <per@bothner.com>